--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
+      <div><li><a class="nav-link" href="#about">About Me</a></li></div>
 
     </div>
   </header><!-- End Header -->
