--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <h1><a href="index.html">Valerie Nierenberg</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionately curious <span>Software Developer</span></h2>
-      <h3>Full Stack | AR/VR</h3>
+      <h2>Full Stack <span>Software Developer</span></h2>
+      <h2 style="font-size: 28px">XR/AR/VR</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
