Add blinking icon for mobile navigation to about page

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>Full Stack <span>Software Developer</span></h2>
       <h2 style="font-size: 28px">XR/AR/VR</h2>
-
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
-          <li><a style="font-size: 20px; color: #18d26e" class="blink_me nav-link" href="#about">About</a></li>
+          <li><a style="font-size: 20px; color: #18d26e" class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Services</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
@@ -60,10 +59,11 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
+        <a href="http://valerienierenberg.github.io/index.html#about" class="info"><i class="blink_me icon-green bi bi-info-circle"></i></a>
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="github"><i class="bi bi-github"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
 
     </div>
@@ -85,33 +85,49 @@
           <img src="assets/img/demo_day_headshot.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3>Full Stack Software Engineer &amp; XR Developer</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            &amp; Passionate member of the budding tech community in my hometown
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Portfolio:</strong> <span><a href="http://github.com/valerienierenberg">Valerie Nierenberg</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>918 760 5034</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Tulsa, Oklahoma, USA</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Arts</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>valerie.nierenberg@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
           </div>
-          <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-          </p>
+          <p style="text-align: center;">
+            Driven software engineer specializing in XR application
+            development, with experience in front-end and back-end development, project management, product design and
+            deployment, and task execution adhering to strict deadlines. Certificate of Full-Stack Software Engineering from Holberton Tulsa Expected April 2022.
+            <br>
+            </p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <span>Demonstrated collaborator</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Innovative problem solver</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Avid Researcher and learner</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <span>Passionate Community Builder</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Determined critical thinker</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>XR and Web Accessibility Advocate</span></li>
+                </ul>
+              </div>
+            </div>
+         <!--</p>-->
         </div>
       </div>
 
