--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
       <div class="section-title">
         <h2>Portfolio</h2>
-        <p>My Works</p>
+        <p>Projects</p>
       </div>
 
       <div class="row">
@@ -521,8 +521,8 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <h3>Address</h3>
+            <p>Holberton Tulsa<br>15 N Cheyenne Ave, Tulsa, OK 74103</p>
           </div>
         </div>
 
@@ -532,10 +532,9 @@
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://twitter.com/Val_Gal_Pal_" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/valerienierenberg" class="github"><i class="bi bi-github"></i></a>
+              <a href="http://www.instagram.com/valeriearthling" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/valerienierenberg" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
