Remove portfolio navigation until portfolio section is complete

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link" href="#about">About</a></li>
           <!--<li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Services</a></li>-->
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <!--<li><a class="nav-link" href="#portfolio">Portfolio</a></li>-->
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -213,7 +213,7 @@
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-            <h3><a style="color: white;" href="https://okwomenintech.org/">Oklahoma Women in Tech</a></h3>
+            <h3><a style="color: white;" href="https://okwomenintech.org/">OK Women in Tech</a></h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -522,14 +522,14 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>Address</h3>
-            <p>Holberton Tulsa<br>15 N Cheyenne Ave, Tulsa, OK 74103</p>
+            <p>15 N Cheyenne Ave, Tulsa, OK 74103</p>
           </div>
         </div>
 
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
-            <h3>Social Profiles</h3>
+            <h3>Socials</h3>
             <div class="social-links">
               <a href="https://twitter.com/Val_Gal_Pal_" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://github.com/valerienierenberg" class="github"><i class="bi bi-github"></i></a>
@@ -543,18 +543,18 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <p><a href="mailto:valerie.nierenberg@gmail.com">valerie.nierenberg@gmail.com</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
+            <p>918 760 5034</p>
           </div>
         </div>
       </div>
-
+<!--
       <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
@@ -577,7 +577,7 @@
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
-
+    -->
     </div>
   </section><!-- End Contact Section -->
 
