--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Learn more about me</p>
+        <p>Hello, I'm Val</p>
       </div>
 
       <div class="row">
