--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
       <div class="section-title">
         <h2>Contact</h2>
-        <p>Contact Me</p>
+        <p>Keep in Touch</p>
       </div>
 
       <div class="row mt-2">
